--- a/Views/Room/Index.cshtml
+++ b/Views/Room/Index.cshtml
@@ -9,169 +9,19 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
-
-    <style>
-        body {
-            font-family: "Lato", sans-serif;
-            background-color: #e1e5f2;
-        }
-
-        .sidebar {
-            height: 100%;
-            width: 0;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color: #022b3a;
-            overflow-x: hidden;
-            transition: 0.5s;
-            padding-top: 60px;
-        }
-
-            .sidebar a {
-                padding: 8px 8px 8px 32px;
-                text-decoration: none;
-                font-size: 25px;
-                color: #bfdbf7;
-                display: block;
-                transition: 0.3s;
-            }
-
-                .sidebar a:hover {
-                    color: #f1f1f1;
-                }
-
-            .sidebar .closebtn {
-                position: absolute;
-                top: 0;
-                right: 25px;
-                font-size: 36px;
-                margin-left: 50px;
-            }
-
-        .chat {
-            height: 100%;
-            width: 0;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            right: 0;
-            background-color: #022b3a;
-            overflow-x: hidden;
-            transition: 0.5s;
-            padding-top: 60px;
-        }
-
-            .chat a {
-                padding: 8px 8px 8px 32px;
-                text-decoration: none;
-                font-size: 25px;
-                color: #bfdbf7;
-                display: block;
-                transition: 0.3s;
-            }
-
-                .chat a:hover {
-                    color: #f1f1f1;
-                }
-
-            .chat .closebtn {
-                position: absolute;
-                top: 0;
-                right: 25px;
-                font-size: 36px;
-                margin-left: 50px;
-            }
-
-        .openbtn {
-            font-size: 20px;
-            cursor: pointer;
-            background-color: #022b3a;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-        }
-
-            .openbtn:hover {
-                background-color: #444;
-            }
-
-        #main {
-            transition: margin-left .5s;
-            padding: 16px;
-        }
-
-        #button-send {
-            margin-top: 7px
-        }
-
-        #button-attach-file {
-            margin-top: 7px
-        }
-
-
-        /*////////////*/ /*///[  Dock  ]///*/ /*////////////*/
-
-        .dockbg {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 35px;
-            background: #bbb;
-        }
-
-        .dock {
-            position: fixed;
-            text-align: center;
-            bottom: 5px;
-            left: 0;
-            right: 0;
-            height: 100px;
-            line-height: 100px;
-        }
-
-            .dock img {
-                display: inline-block;
-                vertical-align: bottom;
-                height: 50%;
-                padding: 0 5px;
-                /* + your animation properties */
-            }
-
-
-                .dock img:hover {
-                    height: 100%;
-                }
-
-        /*////////////*/ /*////////////*/ /*////////////*/
-
-
-
-        /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-        (max-height: 450px) {
-            .sidebar
-
-        {
-            padding-top: 15px;
-        }
-
-        .sidebar a {
-            font-size: 18px;
-        }
-
-        }
-    </style>
+    <script src="~/js/room.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="~/css/room.css" />
 </head>
 <body>
 
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="#">Connect</a>
-        <a href="#">Disconnect</a>
+        <a href="#">Video</a>
+        <a href="#">Audio</a>
         <a href="#"></a>
-        <a hred="#"> <i class="bi bi-box-arrow-left"></i></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a class="btn btn-danger justify-content-center" asp-controller="Home" asp-action="Index"><i class="bi bi-door-closed">&nbsp; Sign Out</i></a>
     </div>
     <div id="myChat" class="chat">
         <a href="javascript:void(0)" class="closebtn" onclick="closeChat()">×</a>
@@ -224,7 +74,7 @@
                         <div class="form-outline">
                             <input type="text" id="addANote" class="form-control" placeholder="Type comment..." />
                             <button id="button-send" type="submit" class="btn btn-primary mb-8" for="addANote">+ Add </button>
-                            <file id="button-attach-file"type="button" class="btn btn-secondary"> <i class="bi bi-paperclip">File</i></file>
+                            <file id="button-attach-file" type="button" class="btn btn-secondary"> <i class="bi bi-paperclip">File</i></file>
                         </div>
                     </div>
                 </div>
@@ -244,16 +94,7 @@
         <button class="openbtn" onclick="openChat()">	➥</button>
     </div>
 
-    <script src=" https://cdn.jsdelivr.net/npm/@@microsoft/signalr@7.0.4/dist/browser/signalr.min.js "></script>
-
-    <script>
-
-        var connection = new signalR.HubConnectionBuilder().withUrl("/chat").build();
-
-        connection.start().catch(function (err) {
-            return console.error(err.toString())
-        });
-
+    <script type="text/javascript">
         function openNav() {
             document.getElementById("mySidebar").style.width = "250px";
             document.getElementById("main").style.marginLeft = "250px";
@@ -278,9 +119,14 @@
             document.getElementById("myChat").style.width = "0";
             document.getElementById("main").style.marginRight = "0";
         }
-
-
     </script>
+
+    <!-- signalR library -->
+    <script src=" https://cdn.jsdelivr.net/npm/@@microsoft/signalr@7.0.4/dist/browser/signalr.min.js "></script>
+
+    <!-- webRTC API -->
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="https://webrtc.github.io/adapter/webrtc.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html> 
