Fixed a typo in Room/Index

--- a/Views/Room/Index.cshtml
+++ b/Views/Room/Index.cshtml
@@ -21,7 +21,7 @@
         <a href="#"></a>
         <a href="#"></a>
         <a href="#"></a>
-        <a class="btn btn-danger justify-content-center" asp-controller="Home" asp-action="Index"><i class="bi bi-door-closed">&nbsp; Sign Out</i></a>
+        <a class="btn btn-danger justify-content-center" asp-controller="Home" asp-action="Index"><i class="bi bi-door-closed">&nbsp; Log Out</i></a>
     </div>
     <div id="myChat" class="chat">
         <a href="javascript:void(0)" class="closebtn" onclick="closeChat()">×</a>
